Entrepreneurs Club Finalised

--- a/Clubs/entrepreneurs/entrepreneurs.html
+++ b/Clubs/entrepreneurs/entrepreneurs.html
@@ -185,8 +185,8 @@ throughout our college campus.
                     <div class=" image col-lg-6">
                       <div class="slider">
                         <div class="slider-container">
-                          <img class="slider-image img-fluid" src="/Clubs/images/Icreate.jpeg"  alt="">
-                          <img class="slider-image img-fluid" src="/Clubs/images/icreate2.jpeg"  alt="">
+                          <img class="slider-image img-fluid" src="/Clubs/images/entrepreneurs/Events/Icreate.jpeg"  alt="">
+                          <img class="slider-image img-fluid" src="/Clubs/images/entrepreneurs/Events/icreate2.jpeg"  alt="">
                         </div>
                       
                     </div>
@@ -211,9 +211,9 @@ throughout our college campus.
                       <div class=" image col-lg-6">
                         <div class="slider">
                           <div class="slider-container">
-                            <img class="slider-image img-fluid" src="/Clubs/images/entre_event1.jpg"  alt="">
-                            <img class="slider-image img-fluid" src="/Clubs/images/entre_event_2.jpg"  alt="">
-                            <img class="slider-image img-fluid" src="/Clubs/images/entre_event_3.jpg"  alt="">
+                            <img class="slider-image img-fluid" src="/Clubs/images/entrepreneurs/Events/entre_event1.jpg"  alt="">
+                            <img class="slider-image img-fluid" src="/Clubs/images/entrepreneurs/Events/entre_event_2.jpg"  alt="">
+                            <img class="slider-image img-fluid" src="/Clubs/images/entrepreneurs/Events/entre_event_3.jpg"  alt="">
 
                           </div>
                         
@@ -233,7 +233,7 @@ throughout our college campus.
         </div>
         <div class="members-grid">
           <div class="member">
-            <img src="/Clubs/images/Mayank_Goyal20.jpg" alt="" />
+            <img src="/Clubs/images/Faculty/Mayank_Goyal20.jpg" alt="" />
             <div class="designation">
               <h4>Dr. Mayank Kumar Goyal</h4>
               <h6>Faculty Coordinator</h6>
@@ -241,99 +241,83 @@ throughout our college campus.
             </div>
           </div>
           <div class="member">
-            <img src="/Clubs/images/Chesta Panwar.png" alt="" />
+            <img src="/Clubs/images/entrepreneurs/Team/Krish Soni.jpg" alt="" />
             <div class="designation">
               <h4>Krish Soni</h4>
               <h6>Club Lead</h6>
-              <i class="fa-brands fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/krish-soni-07b002216/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
-            <img src="/Clubs/images/Priyanshu_Katiyar.png" alt="" />
+            <img src="/Clubs/images/entrepreneurs/Team/Shreya.jpg" alt="" />
             <div class="designation">
               <h4>Shreya Sinha</h4>
               <h6>Club Co-Lead</h6>
-              <a href="https://www.linkedin.com/in/priyanshuktr/"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/shreya-sinha-1691ab229/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+              <img src="/Clubs/images/entrepreneurs/Team/Ashish.jpg" alt="" />
             <div class="designation">
               <h4>Ashish Gupta</h4>
               <h6>Coordinator</h6>
-              <i class="fa-brands fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/ashish-gupta-498915271/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img src="/Clubs/images/entrepreneurs/Team/Vishnu Sharma.jpg" alt="" />
             <div class="designation">
               <h4>Vishnu Sharma</h4>
               <h6>Coordinator</h6>
-              <i class="fa-brands fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/vishnu-sharma-b2a297272/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img src="/Clubs/images/entrepreneurs/Team/Nancy Tomar.jpg" alt="" />
             <div class="designation">
               <h4>Nancy Tomar</h4>
               <h6>Coordinator</h6>
-              <i class="fa-brands fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/nancy-tomar-148641257/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img src="/Clubs/images/entrepreneurs/Team/Anshi.jpeg" alt="" />
             <div class="designation">
               <h4>Anshi Sharma</h4>
               <h6>Coordinator</h6>
-              <i class="fa-brands fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/anshi-sharma-510a50240/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img src="/Clubs/images/entrepreneurs/Team/Aditi Negi.JPG" alt="" />
             <div class="designation">
               <h4>Aditi Negi</h4>
               <h6>Coordinator</h6>
-              <i class="fa-brands fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/aditi-negi-944107262/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img src="/Clubs/images/entrepreneurs/Team/Rishita.jpg" alt="" />
             <div class="designation">
               <h4>Rishita Srivastava</h4>
               <h6>Volunteer</h6>
-              <i class="fa-brands fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/rishita-srivastava-18b661278/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img src="/Clubs/images/entrepreneurs/Team/Shivani.jpg" alt="" />
             <div class="designation">
               <h4>Shivani Singh</h4>
               <h6>Volunteer</h6>
-              <i class="fa-brands fa-linkedin"></i>
+              <i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img src="/Clubs/images/entrepreneurs/Team/SPARSH.jpg" alt="" />
             <div class="designation">
               <h4>Kunwar Sparsh Singh</h4>
               <h6>Volunteer</h6>
-              <i class="fa-brands fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/sparsh-singh-279470273/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
         </div>
