--- a/Clubs/game_drifters/game_drifters.html
+++ b/Clubs/game_drifters/game_drifters.html
@@ -337,9 +337,7 @@ inclusive space where enthusiasts can thrive and push the boundaries of digital 
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img src="/Clubs/images/game_drifters/Team/Saahil.jpg" alt="" />
             <div class="designation">
               <h4>Saahil Singh</h4>
               <h6>Club Co-Lead</h6>
