--- a/Clubs/pixelance/pixelance.html
+++ b/Clubs/pixelance/pixelance.html
@@ -286,9 +286,7 @@ photography styles and genres.
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img class="img-fluid" src="/Clubs/images/pixelance/Team/Ashish_Coordinator.jpg" alt="">
             <div class="designation">
               <h4>Ashish Kumar</h4>
               <h6>Coordinator</h6>
