--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="/Achievments/achievments.html">Achievments</a></li>
           <li><a href="/Members/members.html">Members</a></li>
           <li><a href="/Events/events.html">Events</a></li>
-          <li><a href="#">LeaderBoard</a></li>
+          <li><a href="https://main--deft-sfogliatella-b006f3.netlify.app/leaderBoard">LeaderBoard</a></li>
         </ul>
         <div class="nav-responsive collapse-div">
           <img
