--- a/Events/events.html
+++ b/Events/events.html
@@ -39,6 +39,7 @@
           <li><a href="/Achievments/achievments.html">Achievments</a></li>
           <li><a href="/Members/members.html">Members</a></li>
           <li><a href="/Events/events.html">Events</a></li>
+          <li><a href="https://technova2k23.netlify.app/leaderBoard">LeaderBoard</a></li>
         </ul>
         <div class="nav-responsive collapse-div">
           <img
@@ -68,7 +69,7 @@
                 <p>
                     Technova, delivering excellence by arranging a streak of rousing events which will enhance your technical knowledge and experiences. 
                 </p>
-                <a href="#achievments-slider" class="explore">Explore Now</a>
+                <a target="_blank" href="https://technova2k23.netlify.app/events" class="explore">Explore Now</a>
               </div>
             </div>
             <div class="second col-lg-6">
