--- a/Clubs/gdsc/gdsc.html
+++ b/Clubs/gdsc/gdsc.html
@@ -38,6 +38,7 @@
           <li><a href="/Achievments/achievments.html">Achievments</a></li>
           <li><a href="/Members/members.html">Members</a></li>
           <li><a href="/Events/events.html">Events</a></li>
+          <li><a href="https://technova2k23.netlify.app/leaderBoard">LeaderBoard</a></li>
         </ul>
         <div class="nav-responsive collapse-div">
           <img
