--- a/Members/members.html
+++ b/Members/members.html
@@ -193,9 +193,9 @@
                               "Nurturing Technical & Interpersonal Skills"
                               </p>
               
-                              <h4>Ms. Rani Astya
+                              <h4>Dr. Rani Astya
                               </h4>
-                              <small>Faculty Coordinator, CSE Technical Society
+                              <small>Asst. Professor, Dept. of CSE, SSET
                               </small>
                         </div>
                       </div>
