--- a/Clubs/cyber_pirates/cyber_pirates.html
+++ b/Clubs/cyber_pirates/cyber_pirates.html
@@ -183,7 +183,7 @@
                         <p>
                           The Hack-a-Phone event was successfully hosted by The Cyberpirates Club. This remarkable gathering occurred on the 12th of June, 2023, and brought together individuals with a keen interest in technology, cybersecurity professionals, and inquisitive minds from diverse backgrounds. The event showcased a captivating speaker, <b>Mr. Pranaav Bhatnagar</b>, who holds the role of Club Co-Lead. Mr. Bhatnagar, with the exceptionally talented <b>Ms. Chetna Talan</b> conducted live demonstrations of phone hacking techniques and provided valuable insights on maintaining personal safety in the digital realm. The Hack-a-Phone event not only imparted knowledge about the vulnerabilities of contemporary smartphones to the participants but also instilled a sense of awareness and responsibility regarding personal cybersecurity. Attendees left the event equipped with a deeper understanding of the potential risks associated with phone hacking and armed with practical solutions to mitigate these threats.
                         </p>
-                        <h4>July 09, 202</h4>
+                        <h4>June 12th, 2023</h4>
                         <small>Cyber Pirates Club</small>
                       </div>
                       <div class=" image col-lg-6">
@@ -211,7 +211,7 @@
   
                         </p>
         
-                        <h4>June 12, 2023</h4>
+                        <h4>July 09,2022</h4>
                         <small>Cyber Pirates Club</small>
                       </div>
                       <div class=" image col-lg-6">
@@ -266,12 +266,12 @@
         </div>
         <div class="members-grid">
           <div class="member">
-            <img src="/Clubs/images/Faculty/Preetidubey_cse.jfif" alt="" />
+            <img src="/Clubs/images/Faculty/Avinash_Kumar.jpg" alt="" />
             <div class="designation">
-              <h4>Preeti Dubey</h4>
+              <h4>Avinash Kumar</h4>
               <h6>Faculty Coordinator</h6>
-              <a href="https://www.sharda.ac.in/faculty/details/preeti-dubey"><i class="fa-regular fa-id-badge"></i></a>
-
+              <!-- <a href="https://www.sharda.ac.in/faculty/details/preeti-dubey"> -->
+                <i class="fa-regular fa-id-badge"></i></a>
             </div>
           </div>
           <div class="member">
