--- a/Clubs/data_pool/data_pool.html
+++ b/Clubs/data_pool/data_pool.html
@@ -281,11 +281,11 @@ address the dynamic challenges of the future.
         </div>
         <div class="members-grid">
           <div class="member">
-            <img src="/Clubs/images/Faculty/DrAli_CSE.jfif" alt="" />
+            <img src="/Clubs/images/Faculty/Gaurav_Raj.jpg" alt="" />
             <div class="designation">
-              <h4>Dr. Ali Imam Abidi</h4>
+              <h4>Dr. Gaurav Raj</h4>
               <h6>Faculty Coordinator</h6>
-              <a href="https://www.sharda.ac.in/faculty/details/dr-ali-imam-abidi"><i class="fa-regular fa-id-badge"></i></a>
+              <a href="https://www.sharda.ac.in/faculty/details/dr-gaurav-raj"><i class="fa-regular fa-id-badge"></i></a>
             </div>
           </div>
           <div class="member">
