--- a/Clubs/gdsc/gdsc.html
+++ b/Clubs/gdsc/gdsc.html
@@ -134,7 +134,7 @@
       <section class="features">
         <div class="heading">
           <h2>FEATURES</h2>
-          <h3>Google Developers Club offers a range of skills</h3>
+          <h3>Google Developer Student Clubs offers a range of skills</h3>
         </div>
         <div class="features-grid">
           <div class="feature">
@@ -362,9 +362,9 @@ This event will introduce the participants to the world of Android development. 
                 <div class="container-fluid slider-content">
                   <div class="row">
                       <div class="content col-lg-6">
-                        <span>Google Cloud Ready Facilitation Program</span>
+                        <span>Google Cloud Ready Facilitator Program</span>
                         <p>
-                          Sharda University is among the top 100 institutions which was selected for Google Cloud Ready Facilitation Program by Google Cloud. In addition to that we would like to congratulate <b> Dr. Gaurav Raj sir, Harshit Kesharwani, and Aakash Nakarmi</b> for being selected as Google Cloud Ready Facilitators.
+                          Sharda University is among the top 100 institutions which was selected for Google Cloud Ready FacilitatorProgram by Google Cloud. In addition to that we would like to congratulate <b> Dr. Gaurav Raj sir, Harshit Kesharwani, and Aakash Nakarmi</b> for being selected as Google Cloud Ready Facilitators.
                           Thank you so much Google Cloud , <b> Akshit Jain</b> for providing us this amazing opportunity.
                          Google Developer Student Club held this session which gathered a crowd of more than 250 students.
                         </p>
