--- a/Members/members.html
+++ b/Members/members.html
@@ -280,12 +280,12 @@
 
                 </div>
                 <div class="member">
-                    <img src="/Members/images/PR_Head.jpeg" alt="">
+                    <img src="/Members/images/PR_Head.jpg" alt="">
                     <div class="designation">
-                        <h4>Ojasvi Vats</h4>
+                        <h4>Joel Joyson</h4>
                         <h6>Public Relations Head</h6>
-                        <a href="https://www.linkedin.com/in/ojasvi-vats-3074a7216/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="mailto:2021441610.ojasvi@ug.sharda.ac.in"><i class="mail fa-regular fa-envelope"></i>
+                        <a href="https://www.linkedin.com/in/joel-joyson-a79b87261/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="mailto:2022002756.joel@ug.sharda.ac.in"><i class="mail fa-regular fa-envelope"></i>
                         </a>
                     </div>
 
@@ -293,10 +293,10 @@
                 <div class="member">
                     <img  src="/Members/images/Joint_PR.jpg" alt="">
                     <div class="designation">
-                        <h4>Deepti Rajput</h4>
+                        <h4>Vidhi Bansal</h4>
                         <h6>Joint-PR Head</h6>
-                        <a href="https://www.linkedin.com/in/deepti-rajput-0a057623a/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="mailto:2021399693.deepti@ug.sharda.ac.in"><i class="mail fa-regular fa-envelope"></i>
+                        <a href="https://www.linkedin.com/in/vidhi-bansal-157205280/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="mailto:2022608746.vidhi@ug.sharda.ac.in"><i class="mail fa-regular fa-envelope"></i>
                         </a>
                     </div>
 
