--- a/Members/members.html
+++ b/Members/members.html
@@ -39,7 +39,7 @@
           <li><a href="/Achievments/achievments.html">Achievments</a></li>
           <li><a href="/Members/members.html">Members</a></li>
           <li><a href="/Events/events.html">Events</a></li>
-          <li><a href="https://technova2k23.netlify.app/leaderBoard">LeaderBoard</a></li>
+          <li><a href="https://technova2k23.vercel.app/leaderBoard">LeaderBoard</a></li>
         </ul>
         <div class="nav-responsive collapse-div">
           <img
