--- a/Clubs/game_drifters/game_drifters.html
+++ b/Clubs/game_drifters/game_drifters.html
@@ -333,8 +333,7 @@ inclusive space where enthusiasts can thrive and push the boundaries of digital 
             <div class="designation">
               <h4>Rohan Chaudhary</h4>
               <h6>Club Lead</h6>
-              <a href="https://www.linkedin.com/in/sxamble/"><i class="fa-brands fa-linkedin"></i></a>
-
+              <a href="https://www.linkedin.com/in/rohan-chaudhary-4365b622a/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
@@ -362,14 +361,6 @@ inclusive space where enthusiasts can thrive and push the boundaries of digital 
             </div>
           </div>
           <div class="member">
-            <img src="/Clubs/images/game_drifters/Team/Gauri.jpg" alt="" />
-            <div class="designation">
-              <h4>Gauri</h4>
-              <h6>Coordinator</h6>
-              <a href="https://www.linkedin.com/in/gauri-shivhare-0b5357237/"><i class="fa-brands fa-linkedin"></i></a>
-            </div>
-          </div>
-          <div class="member">
             <img src="/Clubs/images/game_drifters/Team/Divyansh Rana_.jpg" alt="" />
             <div class="designation">
               <h4>Divyansh Rana</h4>
@@ -391,6 +382,14 @@ inclusive space where enthusiasts can thrive and push the boundaries of digital 
               <h4>Shakshi Chauhan</h4>
               <h6>Coordinator</h6>
               <a href="https://www.linkedin.com/in/shakshi-chauhan-785356237/"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+          </div>
+          <div class="member">
+            <img src="/Clubs/images/game_drifters/Team/Gauri.jpg" alt="" />
+            <div class="designation">
+              <h4>Gauri</h4>
+              <h6>Volunteer</h6>
+              <a href="https://www.linkedin.com/in/gauri-shivhare-0b5357237/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="member">
