--- a/Clubs/github/github.html
+++ b/Clubs/github/github.html
@@ -37,8 +37,8 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/Achievments/achievments.html">Achievments</a></li>
           <li><a href="/Members/members.html">Members</a></li>
-          <li><a href="/Events/events.html">Events</a></li>
-          <li><a href="https://technova2k23.vercel.app/leaderBoard">LeaderBoard</a></li>
+          <li><a href="/Events/gallery.html">Gallery</a></li>
+          <li><a href="/surprise.html">Login/SignUp</a></li>
         </ul>
         <div class="nav-responsive collapse-div">
           <img
@@ -338,9 +338,7 @@ As the timer ran out, the competition was heating up. Slowly, the submissions st
             </div>
           </div>
           <div class="member">
-            <div class="profile">
-              <i class="fa-solid fa-user"></i>
-            </div>
+            <img src="/Clubs/images/github/Team/Yusuf Jamal.jpg" alt="" />
             <div class="designation">
               <h4>Yusuf Jamal</h4>
               <h6>Coordinator</h6>
@@ -448,7 +446,7 @@ As the timer ran out, the competition was heating up. Slowly, the submissions st
             <a href="/Achievments/achievments.html">Achievments</a>
           </div>
           <div class="link"><a href="/Members/members.html">Members</a></div>
-          <div class="link"><a href="/Events/events.html">Events</a></div>
+          <div class="link"><a href="/Events/gallery.html">Gallery</a></div>
         </div>
       </div>
       <div class="box4">
