--- a/Clubs/data_pool/data_pool.html
+++ b/Clubs/data_pool/data_pool.html
@@ -37,8 +37,8 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/Achievments/achievments.html">Achievments</a></li>
           <li><a href="/Members/members.html">Members</a></li>
-          <li><a href="/Events/events.html">Events</a></li>
-          <li><a href="https://technova2k23.vercel.app/leaderBoard">LeaderBoard</a></li>
+          <li><a href="/Events/gallery.html">Gallery</a></li>
+          <li><a href="/surprise.html">Login/SignUp</a></li>
         </ul>
         <div class="nav-responsive collapse-div">
           <img
@@ -412,7 +412,7 @@ address the dynamic challenges of the future.
             <a href="/Achievments/achievments.html">Achievments</a>
           </div>
           <div class="link"><a href="/Members/members.html">Members</a></div>
-          <div class="link"><a href="/Events/events.html">Events</a></div>
+          <div class="link"><a href="/Events/gallery.html">Gallery</a></div>
         </div>
       </div>
       <div class="box4">
