--- a/Members/members.html
+++ b/Members/members.html
@@ -38,8 +38,8 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/Achievments/achievments.html">Achievments</a></li>
           <li><a href="/Members/members.html">Members</a></li>
-          <li><a href="/Events/events.html">Events</a></li>
-          <li><a href="https://technova2k23.vercel.app/leaderBoard">LeaderBoard</a></li>
+          <li><a href="/Events/gallery.html">Gallery</a></li>
+          <li><a href="/surprise.html">Login/SignUp</a></li>
         </ul>
         <div class="nav-responsive collapse-div">
           <img
@@ -343,7 +343,7 @@
             <div class="link"><a href="/index.html">Home</a></div>
             <div class="link"><a href="/Achievments/achievments.html">Achievments</a></div>
             <div class="link"><a href="/Members/members.html">Members</a></div>
-            <div class="link"><a href="/Events/events.html">Events</a></div>
+            <div class="link"><a href="/Events/gallery.html">Gallery</a></div>
           </div>
         </div>
         <div class="box4">
