--- a/Clubs/gdsc/gdsc.html
+++ b/Clubs/gdsc/gdsc.html
@@ -37,7 +37,7 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/Achievments/achievments.html">Achievments</a></li>
           <li><a href="/Members/members.html">Members</a></li>
-          <li><a href="/Events/gallery.html">Gallery</a></li>
+          <li><a href="/Gallery/gallery.html">Gallery</a></li>
           <li><a href="/surprise.html">Login/SignUp</a></li>
         </ul>
         <div class="nav-responsive collapse-div">
@@ -530,7 +530,7 @@ This event will introduce the participants to the world of Android development. 
             <a href="/Achievments/achievments.html">Achievments</a>
           </div>
           <div class="link"><a href="/Members/members.html">Members</a></div>
-          <div class="link"><a href="/Events/gallery.html">Gallery</a></div>
+          <div class="link"><a href="/Gallery/gallery.html">Gallery</a></div>
         </div>
       </div>
       <div class="box4">
