--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a href="">Home</a></li>
           <li><a href="/Achievments/achievments.html">Achievments</a></li>
           <li><a href="/Members/members.html">Members</a></li>
-          <li><a href="/Events/gallery.html">Gallery</a></li>
+          <li><a href="/Gallery/gallery.html">Gallery</a></li>
           <li><a href="/surprise.html">Login/SignUp</a></li>
           
         </ul>
@@ -933,7 +933,7 @@
             <a href="/Achievments/achievments.html">Achievments</a>
           </div>
           <div class="link"><a href="/Members/members.html">Members</a></div>
-          <div class="link"><a href="/Events/gallery.html">Gallery</a></div>
+          <div class="link"><a href="/Gallery/gallery.html">Gallery</a></div>
         </div>
       </div>
       <div class="box4">
