--- a/Clubs/cyber_pirates/cyber_pirates.html
+++ b/Clubs/cyber_pirates/cyber_pirates.html
@@ -35,7 +35,7 @@
         <img src="/Home/images/logo.png" width="80px" alt="" />
         <ul class="nav-bar-list">
           <li><a href="/index.html">Home</a></li>
-          <li><a href="/Achievments/achievments.html">Achievments</a></li>
+          <li><a href="/Achievements/achievements.html">Achievements</a></li>
           <li><a href="/Members/members.html">Members</a></li>
           <li><a href="/Gallery/gallery.html">Gallery</a></li>
           <li><a href="/surprise.html">Login/SignUp</a></li>
@@ -158,7 +158,7 @@
           </div>
         </div>
       </section>
-      <section class="achievments-slider" id="achievments-slider">
+      <section class="achievements-slider" id="achievements-slider">
         <div class="heading">
           <h2>Our Events</h2>
           <h3>Mind Blowing Events!</h3>
@@ -396,7 +396,7 @@
         <div class="links">
           <div class="link"><a href="/index.html">Home</a></div>
           <div class="link">
-            <a href="/Achievments/achievments.html">Achievments</a>
+            <a href="/Achievements/achievements.html">Achievements</a>
           </div>
           <div class="link"><a href="/Members/members.html">Members</a></div>
           <div class="link"><a href="/Gallery/gallery.html">Gallery</a></div>
