--- a/Members/members.html
+++ b/Members/members.html
@@ -36,7 +36,7 @@
         <img src="/Home/images/logo.png" width="80px" alt="" />
         <ul class="nav-bar-list">
           <li><a href="/index.html">Home</a></li>
-          <li><a href="/Achievments/achievments.html">Achievments</a></li>
+          <li><a href="/Achievements/achievements.html">Achievements</a></li>
           <li><a href="/Members/members.html">Members</a></li>
           <li><a href="/Gallery/gallery.html">Gallery</a></li>
           <li><a href="/surprise.html">Login/SignUp</a></li>
@@ -341,7 +341,7 @@
           <h4>Quick Links</h4>
           <div class="links">
             <div class="link"><a href="/index.html">Home</a></div>
-            <div class="link"><a href="/Achievments/achievments.html">Achievments</a></div>
+            <div class="link"><a href="/Achievements/achievements.html">Achievements</a></div>
             <div class="link"><a href="/Members/members.html">Members</a></div>
             <div class="link"><a href="/Gallery/gallery.html">Gallery</a></div>
           </div>
