--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -40,6 +40,7 @@
           <li><a href="/Members/members.html">Members</a></li>
           <li><a href="/Gallery/gallery.html">Gallery</a></li>
           <li><a href="/surprise.html">Login/SignUp</a></li>
+          <!-- <li><a href="https://technova-leaderboard.vercel.app/login">Login/SignUp</a></li> -->
         </ul>
         <div class="nav-responsive collapse-div">
           <img
@@ -69,7 +70,7 @@
                 <p>
                     Technova, delivering excellence by arranging a streak of rousing events which will enhance your technical knowledge and experiences. 
                 </p>
-                <!-- <a target="_blank" href="https://technova2k23.vercel.app/events" class="explore">Explore Now</a> -->
+                <!-- <a target="_blank" href="https://technova-leaderboard.vercel.app/events" class="explore">Explore Now</a> -->
               </div>
             </div>
             <div class="second col-lg-6">
@@ -255,39 +256,6 @@
           </div>
         </div>
       </section>
-
-      <!-- <section class="upcoming-events">
-        <div class="heading">
-          <h2>JOIN OUR EVENTS</h2>
-          <h3>Upcoming Events</h3>
-        </div>
-        <div class="events-container">
-          <div class="event">
-            <img class="img-fluid" src="/Events/images/Encipher Coming Soon Gif (1) - frame at 0m3s.jpg" style="background-color: white"  alt="">
-            <div class="info">
-              <h4>Enchiper Coding Competition</h4>
-              <p>Date: April 10 - 12, 2023</p>
-              <a  class="register-now btn-register" href="#"> Register Now!</a>
-            </div>
-        </div>
-            <div class="event">
-              <img class="img-fluid" src="/Events/images/coming-soon.png" style="background-color: white"  alt="">
-              <div class="info info-special">
-                <h4>Technova Felicitation Ceremony</h4>
-                <p>Date: TBD</p>
-                </div>
-                <a class="register-now btn-register" href="#" >Register Now!</a>
-            </div>
-            <div class="event">
-                <img class="img-fluid" src="/Events/images/coming-soon.png" style="background-color: white"  alt="">
-                <div class="info info-special">
-                    <h4>Industry Talk</h4>
-                    <p>Date: TBD</p>
-                </div>
-                <a class="register-now btn-register" href="#">Register Now!</a>
-            </div>
-        </div>
-    </section> -->
     </main>
 
     <footer>
