--- a/Clubs/pixelance/pixelance.html
+++ b/Clubs/pixelance/pixelance.html
@@ -28,6 +28,7 @@
         <li><a href="/Members/members.html">Members</a></li>
         <li><a href="/Gallery/gallery.html">Gallery</a></li>
         <li><a href="/surprise.html">Login/SignUp</a></li>
+        <!-- <li><a href="https://technova-leaderboard.vercel.app/login">Login/SignUp</a></li> -->
       </ul>
       <div class="nav-responsive collapse-div">
         <img class="collapse-img" src="/Home/images/icon-hamburger.svg" alt="" />
