--- a/Members/members.html
+++ b/Members/members.html
@@ -40,6 +40,7 @@
           <li><a href="/Members/members.html">Members</a></li>
           <li><a href="/Gallery/gallery.html">Gallery</a></li>
           <li><a href="/surprise.html">Login/SignUp</a></li>
+          <!-- <li><a href="https://technova-leaderboard.vercel.app/login">Login/SignUp</a></li> -->
         </ul>
         <div class="nav-responsive collapse-div">
           <img
