--- a/Clubs/game_drifters/game_drifters.html
+++ b/Clubs/game_drifters/game_drifters.html
@@ -38,8 +38,8 @@
           <li><a href="/Achievements/achievements.html">Achievements</a></li>
           <li><a href="/Members/members.html">Members</a></li>
           <li><a href="/Gallery/gallery.html">Gallery</a></li>
-          <li><a href="/surprise.html">Login/SignUp</a></li>
-          <!-- <li><a href="https://technova-leaderboard.vercel.app/login">Login/SignUp</a></li> -->
+          <!-- <li><a href="/surprise.html">Login/SignUp</a></li> -->
+          <li><a href="https://technova-leaderboard.vercel.app/login">Login/SignUp</a></li>
         </ul>
         <div class="nav-responsive collapse-div">
           <img
